style index images to centre and 100% width

--- a/app/views/pletools/index.html.erb
+++ b/app/views/pletools/index.html.erb
@@ -51,7 +51,7 @@
                             <div class="masonry-well">
                                 <% if pletool.image.exists? %>
                                     <div class="click-slide click-top"> 
-                                        <%= link_to image_tag pletool.image.url(:medium) %>
+                                        <%= link_to image_tag pletool.image.url(:medium) :align => 'center', :id => 'scaled' %>
                                         <div class = "text-center">
                                             <%= link_to '<span class = "ti ti-eye"></span>'.html_safe, pletool %>
                                         </div>
