deploy sendgrid and style stay updated on footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -26,17 +26,15 @@
             <div class="row footer-row equal-height-col"> 
                 <!-- ::info:: this is equal heights with jQuery -->
                 <div class="col-sm-4 footer-col">
-                    <h4 class="footer-title">Stay Updated - Coming Soon</h4>
- <!--                    <p>Sign up for blog updates. I promise I won't share your email address.</p>
-                    <form action="yourscript.php" method="post">
-                        <div class="input-group">
-                            <input class="form-control form-control-footer" placeholder="Your@EmailAddress.com" type="email">
-                            <span class="input-group-btn">
-                                <button type="submit" class="btn btn-footer">Sign Up</button>
-                            </span>
- -->                            <!--/.input-group-btn--> 
-<!--                         </div>
-                    </form> -->
+                    <div class="has-tooltip">
+                        <a href="#" data-slide="slide" data-target="#signup-panel" data-hover="tooltip" data-placement="top" title="subscribe for email updates"> 
+                            <h4 class="footer-title">Stay Updated&nbsp&nbsp&nbsp<i class="fa fa-calendar-check-o fa-lg">
+                                </i>
+                            </h4>
+                            <p>Sign up for blog updates. I promise I won't share your email address.</p>
+                        </a> 
+                    </div>
+                        
                 </div>
                 <!-- /.col-sm-4 footer-col-->
                 <div class="col-sm-8 footer-col">
