--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -42,7 +42,7 @@
                     <div class="has-tooltip">
                         <a href="#" class="signin-toggle header-btn header-btn-xl" data-slide="slide" data-target="#signup-panel" data-hover="tooltip" data-placement="left" title="for email updates"> <i class="fa fa-pencil header-icon"></i>
                         <span class="header-btn-text">
-                            Sign Up
+                            Subscribe
                         </span>
                         </a> 
                     </div>
