--- a/app/views/layouts/_slideoutpanels.html.erb
+++ b/app/views/layouts/_slideoutpanels.html.erb
@@ -115,7 +115,7 @@
             <h2 class="slide-panel-title">Sign Up</h2>
             <div class="row">
                <!--  <div class="col-md-6"> -->
-                    <h4 class="no-margin-top">Register for Updates - Coming Soon</h4>
+                    <h4 class="no-margin-top">Register for Updates</h4>
                     <!-- <form role="form" action="your-script.php"> -->
                         <div class="form-group">
                             <%= render 'contacts/new' %>             
