beging adding the latest stuff section

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -40,6 +40,7 @@
                 <div class="col-sm-8 footer-col">
                     <h4 class="footer-title">Latest Stuff - Coming Soon</h4>
                     <ul class="img-widget fade-hover-img">
+                    <%= render :partial => 'posts/latest' %>
       <!--                   <li><%= link_to image_tag("demo-images/img-widget/1.jpg"), "#" %></li>
                         <li><%= link_to image_tag("demo-images/img-widget/2.jpg"), "#" %></li>
                         <li><%= link_to image_tag("demo-images/img-widget/3.jpg"), "#" %></li>
