style up rest of latest posts

--- a/app/views/layouts/_slideoutpanels.html.erb
+++ b/app/views/layouts/_slideoutpanels.html.erb
@@ -22,6 +22,9 @@
                 <div class="col-md-6 col-lg-4">
                     <h4>
                         <%= link_to 'Latest Posts', posts_path, :class => 'h2' %>
+                        <br>
+                        <br>
+                        <%= render :partial => 'posts/latest_list' %>
                     </h4>
                     <ul>
  <!--                        <li><a href="your-link-goes-here.html">We will amplify our power to benchmark...</a></li>
