--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -18,8 +18,8 @@
                 <!-- /.col-sm-5 .col-md-3 footer-col -->
                 <div class="col-sm-7 col-md-9 footer-col">
                     <h4 class="footer-title">About Me</h4>
-                    <p>I'm a Psychiatrist, Medical Manager and a few years ago I got selected for a really cool job managing a whole host of medical education and training jobs.  I've always been interested in technology.</p>
-                </div>
+                        <%= image_tag 'site-images/me.jpg', :size => '100x100', :'data-hover' => 'tooltip', :'data-placement' => 'right', :title => "I'm a Psychiatrist, Medical Manager and a few years ago I got selected for a really cool job managing a whole host of medical education and training jobs.  I've always been interested in technology." %>
+                 </div>
                 <!-- /.col-sm-7 col-md-9 footer-col--> 
             </div>
             <!--/.row .footer-row-->
@@ -38,20 +38,9 @@
                 </div>
                 <!-- /.col-sm-4 footer-col-->
                 <div class="col-sm-8 footer-col">
-                    <h4 class="footer-title">Latest Stuff - Coming Soon</h4>
+                    <h4 class="footer-title">Latest Stuff</h4>
                     <ul class="img-widget fade-hover-img">
                     <%= render :partial => 'posts/latest' %>
-      <!--                   <li><%= link_to image_tag("demo-images/img-widget/1.jpg"), "#" %></li>
-                        <li><%= link_to image_tag("demo-images/img-widget/2.jpg"), "#" %></li>
-                        <li><%= link_to image_tag("demo-images/img-widget/3.jpg"), "#" %></li>
-                        <li><%= link_to image_tag("demo-images/img-widget/4.jpg"), "#" %></li>
-                        <li><%= link_to image_tag("demo-images/img-widget/5.jpg"), "#" %></li>
-                        <li><%= link_to image_tag("demo-images/img-widget/6.jpg"), "#" %></li>
-                        <li><%= link_to image_tag("demo-images/img-widget/7.jpg"), "#" %></li>
-                        <li><%= link_to image_tag("demo-images/img-widget/8.jpg"), "#" %></li>
-                        <li><%= link_to image_tag("demo-images/img-widget/9.jpg"), "#" %></li>
-                        <li><%= link_to image_tag("demo-images/img-widget/10.jpg"), "#" %></li>
-         -->            </ul>
                     <!--/.img-widget--> 
                 </div>
                 <!-- /.col-sm-8 footer-col--> 
