--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -78,7 +78,13 @@
                             <h3 class="h2 column-featured-headline">Thinking Differently</h3>
                             <p class="lead"> I've established this site to document my progress and to encourage discussion of my research into the concept of Personal Learning Environments in Medical Education. </p>
                             <p> If you are unfamiliar with the concept of PLEs, click the link below for more information.</p>
-                            <p> <a class="btn btn-featured btn-lg" href="#">Get More Info <i class="fa fa-arrow-right fa-fw"></i></a> </p>
+                            <p> 
+                                <div class="btn btn-featured btn-lg">
+                                    <%= link_to 'http://www.miple.org/posts/so-what-is-a-personal-learning-environment' do %>
+                                        Get More Info <i class="fa fa-arrow-right fa-fw"></i>
+                                    <% end %>
+                                </div>
+                            </p>
                             <span class="column-bg-fake">
                                 <!-- this is a fake column that follows the height of the carousel image -->
                             </span>
@@ -103,106 +109,22 @@
                 <hr class="vertical-spacer vertical-spacer-lg">
                 <div class="headline-inline">
                     <h3 class="headline"> Featured </h3>
-                    <a class="headline-link" href="#"><i class="ti ti-arrow-right"></i> Coming Soon</a> </div>
+                    <a class="headline-link" href="#"><i class="ti ti-arrow-right"></i> Highlighting Blogs and Other PLE Tools</a> </div>
                 <!-- /.headline-inline -->
                 
                 <div class="multi-item-slick slick-dots-left fade-hover-img loading-slick">
                     <div class="slick-slider-item"> <a href="google.com">
-                        <figure> <%= link_to image_tag('site-images/blogholderpic.jpg') %>
+                        <figure> <%= link_to image_tag('site-images/blogholderpic.jpg'), 'http://www.miple.org/posts/why-another-blog' %>
                             <figcaption>
-                                <h3>Latest Blog Post</h3>
+                                <h3>Why another Blog?</h3>
                                 <p>Documenting my journey into MedEd Research and other related matters.</p>
                             </figcaption>
                         </figure>
                         </a>
                         <p class="credit">'Writing Tools' Credit: peteoshea/Flickr</p>
                     </div>
-                    <!-- /.slick-slider-item -->
-                    
-                    <!-- <div class="slick-slider-item"> <a href="portfolio-masonry.html">
-                        <figure> <img data-lazy="assets/demo-images/latest-work-slick/7ptstar-me.jpg" alt="">
-                            <figcaption>
-                                <h3>7 Pointed Star</h3>
-                                <p>Grape silver beet watercress potato tigernut corn groundnut.</p>
-                            </figcaption>
-                        </figure>
-                        </a>
-                        <p class="credit">Credit: Christina Arasmo/Theme Designer</p>
-                    </div> -->
-                    <!-- /.slick-slider-item -->
-                    
-                    <!-- <div class="slick-slider-item"> <a href="portfolio-masonry.html">
-                        <figure> <img data-lazy="assets/demo-images/latest-work-slick/1383113606.jpg" alt="">
-                            <figcaption>
-                                <h3>The Italic Poster</h3>
-                                <p>Chickweed okra pea winter purslane coriander yarrow sweet pepper radish garlic brussels sprout groundnut.</p>
-                            </figcaption>
-                        </figure>
-                        </a>
-                        <p class="credit">Credit: <a class="external link-underline" href="http://www.flickr.com/photos/asthmatic/1383113606/">asthmatic</a> via <a class="external link-underline" href="http://photopin.com">photopin</a> <a class="external link-underline" href="http://creativecommons.org/licenses/by-nd/2.0/">cc</a>.</p>
-                    </div> -->
-                    <!-- /.slick-slider-item -->
-                    
-                    <!-- <div class="slick-slider-item"> <a href="portfolio-masonry.html">
-                        <figure> <img data-lazy="assets/demo-images/latest-work-slick/buddha-me.jpg" alt="">
-                            <figcaption>
-                                <h3>See Yourself In Others</h3>
-                                <p>All beings tremble before violence. All fear death. All love live. See yourself in others, then what harm can you do?</p>
-                            </figcaption>
-                        </figure>
-                        </a>
-                        <p class="credit">Credit: Christina Arasmo/Theme Designer</p>
-                    </div> -->
-                    <!-- /.slick-slider-item -->
-                    
-                    <!-- <div class="slick-slider-item"> <a href="portfolio-masonry.html">
-                        <figure> <img data-lazy="assets/demo-images/latest-work-slick/om-me.jpg" alt="">
-                            <figcaption>
-                                <h3>Om Sweet Aum</h3>
-                                <p>A retro Om design I created a long, long time ago.</p>
-                            </figcaption>
-                        </figure>
-                        </a>
-                        <p class="credit">Credit: Christina Arasmo/Theme Designer</p>
-                    </div> -->
-                    <!-- /.slick-slider-item -->
-                    
-                    <!-- <div class="slick-slider-item"> <a href="portfolio-masonry.html">
-                        <figure> <img data-lazy="assets/demo-images/latest-work-slick/2191568652.jpg" alt="">
-                            <figcaption>
-                                <h3>See Yourself In Others</h3>
-                                <p>All beings tremble before violence. All fear death. All love live. See yourself in others, then what harm can you do?</p>
-                            </figcaption>
-                        </figure>
-                        </a>
-                        <p class="credit">Credit: <a class="external link-underline" href="http://www.flickr.com/photos/karenhorton/2191568652/">karen horton</a> via <a class="external link-underline" href="http://photopin.com">photopin</a> <a class="external link-underline" href="http://creativecommons.org/licenses/by/2.0/">cc</a></p>
-                    </div> -->
-                    <!-- /.slick-slider-item -->
-                    
-                    <!-- <div class="slick-slider-item"> <a href="portfolio-masonry.html">
-                        <figure> <img data-lazy="assets/demo-images/latest-work-slick/3210096256.jpg" alt="">
-                            <figcaption>
-                                <h3>Title Goes Here</h3>
-                                <p>Catsear cauliflower garbanzo yarrow salsify chicory garlic bell pepper napa cabbage lettuce tomato kale.</p>
-                            </figcaption>
-                        </figure>
-                        </a>
-                        <p class="credit">Credit: <a class="external link-underline" href="http://www.flickr.com/photos/ollieolarte/3210096256/">olarte.ollie</a> via <a class="external link-underline" href="http://photopin.com">photopin</a> <a class="external link-underline" href="http://creativecommons.org/licenses/by-sa/2.0/">cc</a>.</p>
-                    </div> -->
-                    <!-- /.slick-slider-item -->
-                    
-               <!--      <div class="slick-slider-item"> <a href="portfolio-masonry.html">
-                        <figure> <img data-lazy="assets/demo-images/latest-work-slick/6995883979.jpg" alt="">
-                            <figcaption>
-                                <h3>Title Goes Here</h3>
-                                <p>Catsear cauliflower garbanzo yarrow salsify chicory garlic bell pepper napa cabbage.</p>
-                            </figcaption>
-                        </figure>
-                        </a>
-                        <p class="credit">Credit: <a class="external link-underline" href="http://www.flickr.com/photos/chrispiascik/6995883979/">Chris Piascik</a> via <a class="external link-underline" href="http://photopin.com">photopin</a> <a href="http://creativecommons.org/licenses/by-nd/2.0/">cc</a>.</p>
-                    </div> -->
-                    <!-- /.slick-slider-item --> 
-                    
+
+                
                 </div>
                 <!-- /.multi-item-slick --> 
                 
