--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -18,7 +18,7 @@
                 <!-- /.col-sm-5 .col-md-3 footer-col -->
                 <div class="col-sm-7 col-md-9 footer-col">
                     <h4 class="footer-title">About Me</h4>
-                        <%= image_tag 'site-images/me.jpg', :size => '100x100', :'data-hover' => 'tooltip', :'data-placement' => 'top', :title => "I'm a Psychiatrist, Medical Manager and a few years ago I got selected for a really cool job managing a whole host of medical education and training jobs.  I've always been interested in technology." %>
+                        <%= image_tag 'site-images/me.jpg', :size => '100x100', :'data-hover' => 'tooltip', :'data-placement' => 'right', :title => "I'm a Psychiatrist, Medical Manager and a few years ago I got selected for a really cool job managing a whole host of medical education and training jobs.  I've always been interested in technology." %>
                  </div>
                 <!-- /.col-sm-7 col-md-9 footer-col--> 
             </div>
