change contact emsil

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -54,7 +54,7 @@
         <div class="container">
             <p class="no-margin">© Theme Copyright 2015 WebsiteTemplatesThatRock.com. 
                 All rights reserved. 
-                Email <a href="mailto:drallewellyn@me.com" class="link-underline">the developer.</a> | <a class="link-underline" href="site-map.html">Site Map</a> </p>
+                Email <a href="mailto:anthony@miple.org" class="link-underline">the developer.</a> | <a class="link-underline" href="site-map.html">Site Map</a> </p>
         </div>
     </div>
     <!--/.footer-copyright--> 
