--- a/app/views/layouts/_slideoutpanels.html.erb
+++ b/app/views/layouts/_slideoutpanels.html.erb
@@ -74,7 +74,7 @@
                         <strong>phone:</strong> <a href="tel:61298446583">61.2.9844.6583</a><br>
                         <strong>fax:</strong> 61.2.9844.6544<br>
                         <span class="overflow">
-                            <strong>email:</strong> <a class="link-underline" href="mailto:Anthony.Llewellyn@health.nsw.gov.au">Anthony.Llewellyn@health.nsw.gov.au</a>
+                            <strong>email:</strong> <a class="link-underline" href="mailto:anthony@miple.org">anthony@miple.org</a>
                         </span>
                     </p>
                 </div>
@@ -101,11 +101,13 @@
         <!--themify icon font--> 
         </a>
         <div class="container">
+        <div class="col-md-6 col-lg-8">
             <h2 class="slide-panel-title">Login/out</h2>
             <div class="row">
                     <%= render 'layouts/newsession' %>
             </div>
             <!-- /.row --> 
+        </div>
         </div>
         <!-- /.container --> 
     </div>
@@ -115,6 +117,7 @@
         <!--themify icon font--> 
         </a>
         <div class="container">
+        <div class="col-md-6 col-lg-8">
             <h2 class="slide-panel-title">Sign Up</h2>
             <div class="row">
                <!--  <div class="col-md-6"> -->
@@ -130,6 +133,7 @@
                 <!-- /.col-*-6 --> 
             </div>
             <!-- /.row --> 
+        </div>
         </div>
         <!-- /.container --> 
     </div>
