fix bug on new posts view

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -7,7 +7,7 @@
             <h2>New Blog Post</h2>
             <ol class="breadcrumb page-header-breadcrumb hidden-xs">
                 <li><%= link_to 'Home', root_path %></li>
-                <li><%= link_to "PLE Tools", postss_path, class: "link-underline" %> </li>
+                <li><%= link_to "Blog", posts_path, class: "link-underline" %> </li>
                 <li class="active">my Blog</li>
             </ol>
         </div>
