--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -60,7 +60,7 @@
 <!--/ entry-header -->
 <!--/ thumbnail if present -->
 <% if @post.image.exists? %>    
-    <%= image_tag(@post.image.url(:large)) %>
+    <%= image_tag(@post.image.url(:medium)) %>
 <% end %>
 <!--/ end thumbnail if present -->
 <!--/ begin article content -->
