--- a/app/views/pletools/_pletool.html.erb
+++ b/app/views/pletools/_pletool.html.erb
@@ -66,7 +66,7 @@
 <!--/ entry-header -->
 <!--/ thumbnail if present -->
 <% if @pletool.image.exists? %>    
-    <%= link_to image_tag(@pletool.image.url(:medium)), url_for(@pletool.link) %>
+    <%= link_to image_tag(@pletool.image.url(:large), :class => 'img-responsive'), url_for(@pletool.link) %>
 <% end %>
 <!--/ end thumbnail if present -->
 <!--/ begin article content -->
